--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body.show-modal .backdrop {
+/* body.show-modal .backdrop {
   opacity: 1;
   visibility: visible;
   pointer-events: initial;
@@ -36,4 +36,22 @@ body.show-modal .modal {
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
      transform: scale(1.1);
       transition: transform 200ms ease-in-out;
-     }
+     } */
+
+/* js4 */
+/* #validation-input {
+      border: 3px solid #bdbdbd;
+   }
+   
+   #validation-input.valid {
+      border-color: #4caf50;
+   }
+   
+   #validation-input.invalid {
+      border-color: #f44336;
+   } */
+
+/* js5 */
+#text {
+  font-size: 16px;
+}
